// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders closed accordion 1`] = `
<DocumentFragment>
  <div
    class=" grid rounded-md gap-4 shadow-lg p-4  box-content duration-300 ease-in-out max-h-[0px]"
  >
    <div
      class="cursor-pointer"
      data-testid="accordionLabelClick"
    >
      <h3>
        Label
      </h3>
    </div>
    <div
      class="relative overflow-hidden duration-300 ease-in-out h-0"
    >
      <div
        class="duration-300 ease-in-out -translate-y-full"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders opened accordion once label is clicked 1`] = `
<DocumentFragment>
  <div
    class=" grid rounded-md gap-4 shadow-lg p-4  box-content duration-300 ease-in-out max-h-full"
  >
    <div
      class="cursor-pointer"
      data-testid="accordionLabelClick"
    >
      <h3>
        Label
      </h3>
    </div>
    <div
      class="relative overflow-hidden duration-300 ease-in-out h-full"
    >
      <div
        class="duration-300 ease-in-out translate-y-0"
      />
    </div>
  </div>
</DocumentFragment>
`;
